--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>首頁</title>
     </head>
+    <audio src="media/song.mp3"></audio>
     <body>
     <hr>
     <img src="image/001.jpg" height="300" width="400">
@@ -58,5 +59,7 @@
                            <td>特價：224 元
                    </table>
        </table> 
+<audio src="Sleep Away.mp3" 
+        autoplay controls loop></audio>
     </body>
 </html>
