--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>首頁</title>
     </head>
     <audio src="media/song.mp3"></audio>
-    <body>
+    <body background="004.jpg">
     <hr>
     <img src="image/001.jpg" height="300" width="400">
     <hr>
