--- a/002.html
+++ b/002.html
@@ -10,6 +10,8 @@
     <img src="image/002.jpg" width="480" height="320">    
     <hr>
     <a href="index.html">轉到第一頁</a>
-    <a href="003.html">轉到第三頁</a>        
+    <a href="003.html">轉到第三頁</a>  
+     <audio src="Sleep Away.mp3" 
+        autoplay controls loop></audio>
     </body>
 </html>
