--- a/002.html
+++ b/002.html
@@ -6,6 +6,7 @@
         <title>第二頁</title>
     </head>
     <body>
+    <body background="004.jpg">
     <hr>
     <img src="image/002.jpg" width="480" height="320">    
     <hr>
