--- a/003.html
+++ b/003.html
@@ -10,6 +10,9 @@
     <img src="image/003.jpg" width="480" height="320">    
     <hr>
     <a href="index.html">轉到第一頁</a>
-    <a href="002.html">轉到第二頁</a>        
+    <a href="002.html">轉到第二頁</a>    
+            <body background="004.jpg">
+        <audio src="Sleep Away.mp3" 
+        autoplay controls loop></audio>
     </body>
 </html>
