--- a/index.html
+++ b/index.html
@@ -18,22 +18,20 @@
                    <table>
                        <tr>
                            <td rowspan="2">
-                               <img src="http://www.flag.com.tw/images/cover/middle/F4953.gif"
+                               <img src="image/002.jpg"
                                     width="70" height="95">
-                           <td><a href="002.html"> 核心訓練圖解聖經</a>
+                           <td><a href="002.html">第二頁</a>
                        <tr>
-                           <td>特價：464 元
                    </table>
                <td>
                    <!-- 內層表格 -->
                    <table>
                        <tr>
                            <td rowspan="2">
-                               <img src="http://www.flag.com.tw/images/cover/middle/F2952.gif"
+                               <img src="image/003.jpg"
                                     width="70" height="95">
-                           <td><a href="003.html">運動傷害圖解聖經</a>
+                           <td><a href="003.html">第三頁</a>
                        <tr>
-                           <td>特價：464 元
                    </table>
            <tr>             <!-- 外層 2x2 表格第 2 列 --> 
                <td>
@@ -41,22 +39,22 @@
                    <table>
                        <tr>
                            <td rowspan="2">
-                               <img src="http://www.flag.com.tw/images/cover/middle/F2957.gif"
+                               <img src="yahoo.jpg"
                                     width="70" height="95">
-                           <td><a href="http://www.csu.edu.tw/main.php.html">路跑 Follow Me</a>
+                           <td><a href="http://www.csu.edu.tw/main.php">Yahoo</a>
                        <tr>
-                           <td>特價：224 元
+                           <td>首頁
                    </table>
                <td>
                    <!-- 內層表格 -->
                    <table>
                        <tr>
                            <td rowspan="2">
-                               <img src="http://www.flag.com.tw/images/cover/middle/F2912.gif"
+                               <img src="正修.png"
                                     width="70" height="95">
-                           <td><a href="https://tw.yahoo.com/">硬骨頭學瑜伽</a>
+                           <td><a href="https://tw.yahoo.com/">正修科技大學</a>
                        <tr>
-                           <td>特價：224 元
+                           <td>首頁
                    </table>
        </table> 
 <audio src="Sleep Away.mp3" 
