--- a/003.html
+++ b/003.html
@@ -9,6 +9,7 @@
     <hr>
     <img src="image/003.jpg" width="480" height="320">    
     <hr>
+   <title>看看花，心情好</title>
     <a href="index.html">轉到第一頁</a>
     <a href="002.html">轉到第二頁</a>    
             <body background="004.jpg">
