--- a/003.html
+++ b/003.html
@@ -9,7 +9,7 @@
     <hr>
     <img src="image/003.jpg" width="480" height="320">    
     <hr>
-     <td>看看花，心情好
+   看看花，心情好
     <a href="index.html">轉到第一頁</a>
     <a href="002.html">轉到第二頁</a>    
             <body background="004.jpg">
